This is the C SDK for EdgeX. Its API is based largely on the Go SDK.

Changes for 1.3.0 "Hanoi":

- Event transmission is serialized and operates from a queue with configurable
  maximum length.

Changes for 1.2.1:

- Fixes in the compatibility layer for the v1 API.

Changes for 1.2.0 "Geneva":

- --instance flag introduced for suffixing the device service name.
- Environment variable names for config over-rides are all-uppercase.
- Device lastConnected property is managed (configurable and disabled by default)
- Implementations may change the operational state of a device.
- Commandline and environment options aligned with Go microservices.
- Arrays of primitive types supported in Readings.
- Device Readings are populated with datatype information.
- Full dynamic discovery implementation with Provision Watchers.
- New SDK API: see README.v2.md for details.
  - the v1 API will be removed in version 2.0.0
- Utility functions added in edgex-base.h for finding Protocol Properties, and
  for obtaining numeric values from name-value pair lists.

Changes for 1.1.0 "Fuji":

- ResourceOperation field "object" is renamed to "deviceResource".
  - "object" is still recognized for compatibility purposes but is deprecated.
- Implement "defaultValue" and "parameter" fields for write operations.
- Allow query strings to be passed to device GET requests.
- Added /api/version endpoint for obtaining service version strings.
- Commandline argument processing mostly handled within the SDK.
- Added callback API for device addition/update/removal events.
- Configuration can be overridden via environment variables when populating
  the registry.
- Subtables are supported in the Driver configuration.
- Device services de-register from the registry on exit.
- Event timestamps are now at nanosecond resolution, and are monotonic.

Changes for 1.0.0 "Edinburgh":

- EnableLogging replaces RemoteURL in the Logging configuration. The location