@@ -15,10 +15,6 @@
     Host = 'localhost'
     Port = 48081
 
-  [Clients.Logging]
-    Host = 'localhost'
-    Port = 48061
-
 [Device]
   DataTransform = false
   Discovery = false
@@ -32,8 +28,6 @@
   SendReadingsOnChanged = true
 
 [Logging]
-  EnableRemote = false
-  File = '-'
   LogLevel = 'DEBUG'
 
 [[DeviceList]]
